2006-04-05  Mikael Hallendal  <micke@imendio.com>

	* Speed release of 1.0.3
	* NEWS: Updated
	* configure.in: Bumped to 1.0.3
	* loudmouth/lm-ssl.c: (ssl_free), (ssl_func_always_continue):
	- Build fix for building without SSL, thanks foser, LM-25.

2006-04-05  Mikael Hallendal  <micke@imendio.com>

	* Release 1.0.2
	* NEWS: Updated for 1.0.2
	* configure.in: Bumped version to 1.0.2

2006-04-03  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: (connection_free),
	(_lm_connection_succeeded), (connection_buffered_write_cb),
	(connection_output_is_buffered), (connection_setup_output_buffer),
	(connection_do_close), (connection_do_write), (connection_send),
	(lm_connection_new), (lm_connection_authenticate):
	- Added an output buffer that will be enabled if the nonblocking write
	  cannot be performed in one go (for large messages).
	- Fixes LM-17.
	* loudmouth/lm-internals.h:
	* loudmouth/lm-ssl.c: (ssl_func_always_continue), (_lm_ssl_send),
	(lm_ssl_new):
	- Added a default SSL function that will always continue, this will 
	  be used if NULL is passed in as SSL function to lm_ssl_new.

2006-03-20  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: 
	(connection_do_open): Fixed up some of the error codes replied.
	(lm_connection_open_and_block):
	- Set the error if connection fails. 
	- Fixes LM-15.

2006-03-20  Mikael Hallendal  <micke@imendio.com>

	* Makefile.am:
	* acinclude.m4:
	* configure.in:
	* tests/.cvsignore:
	* tests/Makefile.am:
	* tests/test-objects.[ch]:
	- Started to add support for the Check unit test framework.

2006-03-20  Mikael Hallendal  <micke@imendio.com>

	* loudmouth/lm-connection.c: Fixes LM-16.
	(_lm_connection_failed_with_error): 
	- Call connection_do_close to remove sources.
	(connection_do_close): Always set the connection state to CLOSED.

2006-01-02  Mikael Hallendal  <micke@imendio.com>

	* MAINTAINERS: Added

2005-08-16  Mikael Hallendal  <micke@imendio.com>

	* NEWS:
	* configure.in: